# serverless

./: .gitignore  Makefile  api.py  config.cfg  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: checks.yml  linters.yml  staging.yml
api/: client.py  utils.py
env/: __init__.py  local.example.py
src/: __init__.py  choose_result.py  create_draw.py  fetch_movements.py  random_seed.py
src/env/: __init__.py  local.example.py
utils/: api.py  decorators.py
